arrumando href index para homepage

--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -17,6 +17,6 @@
 <script>
     // Rotas
     if (window.location == "http://localhost:3000/") {
-        window.location = "http://localhost:3000/html/homepage.html"
+        window.location = "http://localhost:3000/html/homepageAlt.html"
     }
 </script>
