--- a/Site/public/html/cadastroVaga.html
+++ b/Site/public/html/cadastroVaga.html
@@ -31,8 +31,8 @@
                         onmouseout="src='../img/home-button-white.png';"></a>
             </div>
         </div>
+    
     </div>
-
     <div id="container">
         <div id="mainBox">
             <div id="content">
@@ -102,6 +102,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
