--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -26,7 +26,7 @@
                         href="http://localhost:3000/login">Entrar</a></button>
                 <button class="buttonHeader" style="margin-right: 7%"><a class="li-comum"
                         href="http://localhost:3000/cadastro">Cadastre-se</a></button>
-                <a href="http://localhost:3000/html/perfilCandidato" style="margin-right: 7%;"><img class="imgProfile"
+                <a href="http://localhost:3000/html/perfilCandidato.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
                 <a href="http://localhost:3000/html/feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
