subindo novo header logado e página cadastro vaga em react

--- a/Site/public/html/cadastroVaga.html
+++ b/Site/public/html/cadastroVaga.html
@@ -88,7 +88,7 @@
                         <textarea style="height: 70px;" name="" id="" cols="30" rows="10" placeholder="Descreva a vaga de forma resumida."></textarea>
                     </div>
                     <div style="text-align: center;">
-                        <button style="margin-top: 10px;" onclick="avancar2()" class="grayButton" style="">Avançar</button>
+                        <button style="margin-top: 10px;" onclick="avancar2()" class="grayButton">Avançar</button>
                     </div>
                 </div>
 
