feed empresa - React fixed

--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -76,7 +76,7 @@
                             <input class="searchBarMobile" type="search" placeholder="Digite uma tag">
                         </div>
         
-                        <div class="divAlignLeft">
+                        <!-- <div class="divAlignLeft">
                             <p class="subtitle">Buscar por Faixa Salarial</p>
                             <div class="divSpaceBetween2">
                                 <p class="subtitle">de:</p>
@@ -86,7 +86,7 @@
                                 <p class="subtitle">até:</p>
                                 <input class="searchBarSmall" type="search" placeholder="R$ 6500,00">
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 
@@ -129,7 +129,7 @@
                     </div>
                 </div>
 
-                <div class="divAlignLeft">
+                <!-- <div class="divAlignLeft">
                     <p class="subtitle">Buscar por Faixa Salarial</p>
                     <div class="divSpaceBetween2">
                         <p class="subtitle">de:</p>
@@ -139,7 +139,7 @@
                         <p class="subtitle">até:</p>
                         <input class="searchBarSmall" type="search" placeholder="R$ 6500,00">
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
