--- a/Site/public/html/perfilEmpresa.html
+++ b/Site/public/html/perfilEmpresa.html
@@ -25,7 +25,7 @@
                 <a href="http://localhost:3000/html/perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
-                <a href="http://localhost:3000/html/feedEmpresa.html"><img class="imgIcon" src="../img/home-button-white.png"
+                <a href="http://localhost:3000/feed-empresa"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
             </div>
