--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -23,14 +23,21 @@
 
     empresa = sessionStorage.getItem("idEmpresa") ? sessionStorage.getItem("idEmpresa") : null;
 
-    if (window.location == "http://localhost:3000/") {
-        if (usuario.length > 0) {
+    function checkLogin()
+    {
+        if (usuario != null) {
             window.location = "http://localhost:3000/feed-vagas";
+            return;
         }
-        else if (empresa.length > 0) {
+        if (empresa != null) {
             window.location = "http://localhost:3000/feed-empresa"
-        } else {
-        window.location = "http://localhost:3000/html/homePage.html"
+            return;
         }
+
+        window.location = "http://localhost:3000/html/homePage.html"
+    }
+
+    if (window.location == "http://localhost:3000/") {
+        checkLogin();
     }
 </script>
