apontando api e front para aws

--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -17,19 +17,19 @@
     <!--Header caso o usuário esteja vendo sem estar logado-->
     <div class="divHeaderFather">
         <div class="divHeaderContainer">
-            <a href="http://localhost:3000/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="http://52.45.218.11:3000/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
             <div class="divButtons">
                 <button class="buttonHeader" style="margin-right: 3%"><a class="li-comum"
-                        href="http://localhost:3000/login">Entrar</a></button>
+                        href="http://52.45.218.11:3000/login">Entrar</a></button>
                 <button class="buttonHeader" style="margin-right: 7%"><a class="li-comum"
-                        href="http://localhost:3000/cadastro">Cadastre-se</a></button>
-                <a href="http://localhost:3000/html/perfilCandidato.html" style="margin-right: 7%;"><img class="imgProfile"
+                        href="http://52.45.218.11:3000/cadastro">Cadastre-se</a></button>
+                <a href="http://52.45.218.11:3000/html/perfilCandidato.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
-                <a href="http://localhost:3000/html/feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
+                <a href="http://52.45.218.11:3000/html/feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
 
