--- a/Site/public/html/cadastroVaga.html
+++ b/Site/public/html/cadastroVaga.html
@@ -18,15 +18,15 @@
     <!--Header caso o usuário esteja vendo logado-->
     <div class="divHeaderFather" style="position: unset;">
         <div class="divHeaderContainer">
-            <a href="http://52.45.218.11:3000/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="http://dev4me.ddns.net:3000/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
             <div class="divButtons">
-                <a href="http://52.45.218.11:3000/html/perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
+                <a href="http://dev4me.ddns.net:3000/html/perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
-                <a href="http://52.45.218.11:3000/html/feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
+                <a href="http://dev4me.ddns.net:3000/html/feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
             </div>
@@ -117,7 +117,7 @@
 <script>
     function publicar()
     {
-        window.location = "http://52.45.218.11:3000/html/feedVagas.html";
+        window.location = "http://dev4me.ddns.net:3000/html/feedVagas.html";
     }
 
     function avancar1()
