--- a/Site/public/html/homePage.html
+++ b/Site/public/html/homePage.html
@@ -16,14 +16,14 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
-                    <a href="https://dev4me.ddns.net:3000/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+                    <a href="https://dev4me.ddns.net/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                         onmouseout="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                         onmouseover="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="https://dev4me.ddns.net:3000/login">Entrar</a></li></button>
-                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="https://dev4me.ddns.net:3000/cadastro">Cadastre-se</a></li></button>
+                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="https://dev4me.ddns.net/login">Entrar</a></li></button>
+                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="https://dev4me.ddns.net/cadastro">Cadastre-se</a></li></button>
                         </ul>
                     </div>
                 </div>
@@ -42,8 +42,8 @@
                                     Economize tempo. Encontre vagas conforme suas preferências.
                                     Você no controle.</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://dev4me.ddns.net:3000/html/feedVagas.html">Saiba Mais</a>
-                                    <a class="btn btn-outline-light btn-lg px-4" href="https://dev4me.ddns.net:3000/cadastro">Cadastre-se</a>
+                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="https://dev4me.ddns.net/html/feedVagas.html">Saiba Mais</a>
+                                    <a class="btn btn-outline-light btn-lg px-4" href="https://dev4me.ddns.net/cadastro">Cadastre-se</a>
                                     
                                 </div>
                             </div>
