--- a/Site/public/html/perfilEmpresa.html
+++ b/Site/public/html/perfilEmpresa.html
@@ -17,15 +17,15 @@
     <!--Header caso o usuário esteja vendo logado-->
     <div class="divHeaderFather">
         <div class="divHeaderContainer">
-            <a href="https://dev4me.ddns.net:3000/feed-empresa"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="https://dev4me.ddns.net/feed-empresa"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
             <div class="divButtons">
-                <a href="https://dev4me.ddns.net:3000/html/perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
+                <a href="https://dev4me.ddns.net/html/perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
-                <a href="https://dev4me.ddns.net:3000/feed-empresa"><img class="imgIcon" src="../img/home-button-white.png"
+                <a href="https://dev4me.ddns.net/feed-empresa"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
             </div>
