--- a/Site/public/html/homePage.html
+++ b/Site/public/html/homePage.html
@@ -16,7 +16,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
-                    <a href="https://dev4me.ddns.net/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+                    <a href="https://dev4me.ddns.net/html/homePage.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                         onmouseout="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                         onmouseover="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
