--- a/Site/public/html/feedVagasVaga.html
+++ b/Site/public/html/feedVagasVaga.html
@@ -17,7 +17,7 @@
     <!--Header caso o usuário esteja vendo logado-->
     <div class="divHeaderFather" style="position: unset;">
         <div class="divHeaderContainer">
-            <a href="https://dev4me.ddns.net/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="https://dev4me.ddns.net/html/homePage.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
