--- a/Site/public/html/homePage.html
+++ b/Site/public/html/homePage.html
@@ -22,8 +22,8 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="../../src/pages/Login.jsx">Entrar</a></li></button>
-                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="../../src/pages/Cadastro.jsx">Cadastre-se</a></li></button>
+                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="https://dev4me.ddns.net/login">Entrar</a></li></button>
+                            <button class="buttonHeader"><li class="nav-item"><a class="nav-link" href="https://dev4me.ddns.net/cadastro">Cadastre-se</a></li></button>
                         </ul>
                     </div>
                 </div>
